# dynamic-pricing-filo

./: .gitignore  README.md  pyproject.toml
scripts/: make_synthetic_resale_data.py
server/: app.py
src/fleet_pricing/: cli.py
src/fleet_pricing/financing/: loan.py
src/fleet_pricing/npv/: engine.py
src/fleet_pricing/pricing/: client_adjustments.py
src/fleet_pricing/resale/: model.py
tests/: test_loan.py  test_npv_engine.py
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: main.js  main.ts  style.css
